Memory package refactor
Moved memory properties accessor to device
Removed allocation service and allocator interface
Replaced with allocator base-class
Removed memory selector and merged into new class
Specialised for pool and routing (TODO)
Allocator passed to use-cases (buffers, images, screenshot)
Memory pool allocation by reference
Added memory type to implementations
Empty required memory properties is now valid
TEMP - removed routing allocator